# derivative-backend

./: .dockerignore  .env  .env.example  .env.save  .gitignore  Caddyfile  Cargo.toml  Dockerfile  README.md  docker-compose.yml  dump.sql  openapi.yaml
migrations/: 001_create_organizations.sql  002_create_user_profiles.sql  003_create_user_projects.sql  004_create_project_likes.sql  005_create_project_comments.sql  006_create_project_views.sql  007_create_functions.sql  008_create_triggers.sql  009_create_indexes.sql  010_import_dump.sql  011_fix_password_hashes.sql  012_force_fix_password_hashes.sql  013_correct_password_hashes.sql  014_create_project_collaborators.sql  015_create_analytics_tables.sql  016_complete_collaboration_analytics.sql  017_create_contact_requests.sql  018_contact_requests_phone_required_dedupe.sql  019_extend_user_type_roles.sql  020_create_classrooms.sql  021_create_classroom_students.sql  022_create_assignments.sql  023_create_submissions.sql
src/: config.rs  errors.rs  main.rs
src/db/: mod.rs  pool.rs
src/handlers/: admin.rs  admin_dashboard.rs  auth.rs  classroom.rs  collaboration.rs  community.rs  contact_requests.rs  metrics.rs  mod.rs  org_admin.rs  organizations.rs  projects.rs  users.rs  ws.rs
src/middleware/: admin.rs  auth.rs  mod.rs
src/models/: classroom.rs  collaboration.rs  comment.rs  contact_request.rs  like.rs  metrics.rs  mod.rs  organization.rs  project.rs  user.rs  view.rs
src/routes/: admin.rs  auth.rs  classroom.rs  collaboration.rs  community.rs  contact_requests.rs  metrics.rs  mod.rs  org.rs  projects.rs  users.rs  ws.rs
src/services/: auth_service.rs  classroom_service.rs  collaboration_service.rs  community_service.rs  metrics_service.rs  mod.rs  organization_service.rs  project_service.rs  user_service.rs
src/utils/: file_storage.rs  jwt.rs  mod.rs  pagination.rs  password.rs
src/websocket/: handler.rs  messages.rs  mod.rs
