[package]
name = "derivative-backend"
version = "1.0.0"
edition = "2021"
authors = ["Derivative Team"]
description = "Production-ready backend API for Derivative visual programming platform"
license = "MIT"
repository = "https://github.com/derivative/backend"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["ws", "multipart", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "limit", "timeout"] }
tokio = { version = "1", features = ["full", "signal"] }
hyper = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Authentication & Security
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Environment & Configuration
dotenvy = "0.15"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error Handling
thiserror = "1"
anyhow = "1"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# WebSocket
tokio-tungstenite = "0.21"

# File handling
mime_guess = "2"
tokio-util = { version = "0.7", features = ["io"] }

# Utility
once_cell = "1"
parking_lot = "0.12"
dashmap = "5"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "derivative-backend"
path = "src/main.rs"
